@@ -1,3 +1,10 @@
+Ongoing
+
+Fixes:
+- Issue 34: "Behavior of Text Filter is unpredictable when "regular expression" mode is enabled."
+  Regex was not compiled with case insensitivity flag.
+   
+
 1.0.1 Release (May 12, 2010)
 
 Fixes:
